--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
 import Header from '../components/Header.astro';
+import Launches from '../components/Launches.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="SpaceX Launches.">
-	La pagina principal
+	<Launches/>
 </Layout>
